==> GebraMS/apds9806-arduino/GebraBit_APDS9306/GebraBit_APDS9306.cpp <==
#include "GebraBit_APDS9306.h"

void GB_APDS9306_Read_Reg_Data(uint8_t regAddr,  uint8_t *data)																			/*		Read Burst Data From Register			*/
{
	Wire.beginTransmission(APDS9306_ADDRESS);
    Wire.write(regAddr); 
    Wire.endTransmission(false); 
    Wire.requestFrom((uint8_t)APDS9306_ADDRESS, (uint8_t)1);
	delay(15);
    if (Wire.available()) {
        *data = Wire.read(); 
    }
}

void GB_APDS9306_Burst_Read(uint8_t regAddr,  uint8_t *data, uint16_t byteQuantity)																			/*		Read Burst Data From Register			*/
{
	Wire.beginTransmission(APDS9306_ADDRESS);
    Wire.write(regAddr); 
    Wire.endTransmission(false); 
    Wire.requestFrom((uint8_t)APDS9306_ADDRESS, (uint8_t)byteQuantity); 
	delay(15);
    for (uint16_t i = 0; i < byteQuantity; i++) {
        if (Wire.available()) {
            data[i] = Wire.read();
        }
    }
}

void GB_APDS9306_Write_Command( uint8_t cmd)
{
	uint8_t TBuff[1];
	TBuff[0]=cmd;
	Wire.beginTransmission(APDS9306_ADDRESS);
	Wire.write(cmd); 
    Wire.endTransmission(); 
}

void GB_APDS9306_Write_Reg_Data(uint8_t regAddr,  uint8_t data)																			/*		Read Burst Data From Register			*/
{
	Wire.beginTransmission(APDS9306_ADDRESS);
    Wire.write(regAddr); 
    Wire.write(data); 
    Wire.endTransmission();
}

void GB_APDS9306_Burst_Write(uint8_t regAddr,  uint8_t *data, uint16_t byteQuantity)																			/*		Read Burst Data From Register			*/
{
	Wire.beginTransmission(APDS9306_ADDRESS);
    Wire.write(regAddr);
	delay(15);
	for (uint16_t i = 0; i < byteQuantity; i++){
		Wire.write(data[i]);
	}
    Wire.endTransmission();
}
