==> BRivsC/ELO301-G8/Firmware/FW Wi-Fi Shield Rev1/Core/Src/GebraBit_APDS9306.c <==
#include "GebraBit_APDS9306.h"

void GB_APDS9306_Read_Reg_Data(uint8_t regAddr,  uint8_t *data)																			/*		Read Burst Data From Register			*/
{
	HAL_I2C_Mem_Read(APDS9306_I2C,APDS9306_READ_ADDRESS,regAddr,1,data,1,200);
}

void GB_APDS9306_Burst_Read(uint8_t regAddr,  uint8_t *data, uint16_t byteQuantity)																			/*		Read Burst Data From Register			*/
{
	HAL_I2C_Mem_Read(APDS9306_I2C,APDS9306_READ_ADDRESS,regAddr,1,data,byteQuantity,200);
}

void GB_APDS9306_Write_Command( uint8_t cmd)
{
	uint8_t TBuff[1];
	TBuff[0]=cmd;
	HAL_I2C_Master_Transmit(APDS9306_I2C,APDS9306_WRITE_ADDRESS,TBuff,1,100);
}

void GB_APDS9306_Write_Reg_Data(uint8_t regAddr,  uint8_t data)																			/*		Read Burst Data From Register			*/
{
	HAL_I2C_Mem_Write(APDS9306_I2C,APDS9306_WRITE_ADDRESS,regAddr,1,&data,1,200);
}

void GB_APDS9306_Burst_Write(uint8_t regAddr,  uint8_t *data, uint16_t byteQuantity)																			/*		Read Burst Data From Register			*/
{
	HAL_I2C_Mem_Write(APDS9306_I2C,APDS9306_WRITE_ADDRESS,regAddr,1,data,byteQuantity,200);
}
